--- a/css/styles.css
+++ b/css/styles.css
@@ -729,6 +729,8 @@
   color: #ffffff;
   text-align: center;
   cursor: pointer;
+  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -740,7 +742,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(46, 47, 66, 0.04);
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -755,9 +757,9 @@
   width: 408px;
   min-height: 584px;
   background-color: #fcfcfc;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0.14),
-  0px 1px 3px rgba(0, 0, 0.12),
-  0px 2px 1px rgba(0, 0, 0.2);
+  box-shadow:  0px 1px 1px rgba(0, 0, 0, 0.14), 
+  0px 1px 3px rgba(0, 0, 0, 0.12),
+   0px 2px 1px rgba(0, 0, 0, 0.2); 
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
@@ -774,16 +776,27 @@
   align-items: center;
   justify-content: center;
   background-color: #e7e9fc;
-  border: 1px solid rgba(0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-but:hover,
+.close-but:focus{
+  background-color: #404bbf; 
+  border: none; 
 }
 
 
 .close-icon{
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-icon:hover,
+.close-icon:focus{
+  fill: #ffffff;
 }
 
 .text-title{
@@ -792,7 +805,7 @@ border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.02;
+  letter-spacing: 0.02em;
   margin-bottom: 16px;
 }
 
@@ -814,18 +827,23 @@ border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .form-input{
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(46, 47, 66, 0.04);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 4px;
   filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   color: #FFFFFF;
+  padding-left: 38px;
   line-height: 1.5;
-  letter-spacing: 0.04em;;
+  outline: transparent;
+  letter-spacing: 0.04em;
+  width: 264px;
 }
 
-
+.form-input:focus{
+  border-color: #4D5AE5;
+}
 
 .icon-person{
   position: absolute;
@@ -833,6 +851,10 @@ border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-person:focus{
+  fill: #4D5AE5;
 }
 
 .form-name{
@@ -928,11 +950,6 @@ label{
   text-decoration-line: underline;
 }
 
-
-
-.form-name-label:focus-within {
-  color: #2196f3;
-}
 
 
 .form-contacts-button{
