--- a/css/styles.css
+++ b/css/styles.css
@@ -824,6 +824,21 @@
   position: relative;
 }
 
+
+.input-footerz{
+  border:  1px solid #ffffff; 
+  padding-left: 16px;
+  width: 264px;
+  height: 40px; 
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px; 
+  color: #ffffff; 
+}
+
 .form-input{
   width: 100%;
   height: 40px;
