--- a/css/styles.css
+++ b/css/styles.css
@@ -883,6 +883,7 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .icon-person:focus{
   fill: #4D5AE5;
 }
@@ -899,7 +900,7 @@
 .textarea{
   width: 100%;
   height: 120px;
-  color:#404bbf, rgba(46, 47, 66, 0.04);
+  color: rgba(46, 47, 66, 0.04);
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -971,6 +972,13 @@ label{
 
 }
 
+.input:cheked 
+.checkbox-span{
+  background-color:  #404bbf; 
+  border: none;
+  fill: #F4F4FD;
+}
+
 
 .privacy-policy{
   color:#4d5ae5;
@@ -996,7 +1004,17 @@ label{
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 1.5;
   font-weight: 500;
+  letter-spacing: 0.04em;
 }
+
+.form-contacts-button:hover{
+  fill: #ffffff;
+}
+
+.form-contacts-button:focus{
+  fill: #ffffff;
+}
+
 
 
 
