--- a/css/styles.css
+++ b/css/styles.css
@@ -914,7 +914,7 @@
 .textarea{
   width: 100%;
   height: 120px;
-  color: rgba(46, 47, 66, 0.04);
+  color: rgba(46, 47, 66, 0.4);
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
@@ -925,6 +925,11 @@
   outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   resize: none;
+}
+
+
+.textarea:focus{
+  border-color: #4D5AE5; 
 }
 
 .checkbox-container{
@@ -975,9 +980,9 @@ label{
 .checkbox-span{
   width: 16px;
   height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.04);
+  border:1px solid rgba(46, 47, 66, 0.04);
   border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
@@ -1030,8 +1035,8 @@ label{
 }
 
 
-.form-input:focus
-.icon-person{
+.form-input:focus-within + .icon-person{
   fill: #4D5AE5;
 }
   
+
