--- a/css/styles.css
+++ b/css/styles.css
@@ -692,7 +692,9 @@
   
   /* contacts and buttons*/
 
-
+.input-footer{
+margin-left: 100px;
+ }
 
 
 .sub-icon{
@@ -732,6 +734,7 @@
   .subscribe{
     display: flex;
     gap: 24px;
+  
   }
   
 
@@ -947,7 +950,9 @@
 }
 
 .checkbox-icon{
- color: #2E2F4266;
+fill: #ffffff;
+border-style: #8E8F99;
+
 }
 
 
@@ -980,10 +985,9 @@ label{
 .checkbox-span{
   width: 16px;
   height: 16px;
-  border:1px solid rgba(46, 47, 66, 0.04);
+  border: 1px solid rgba(46, 47, 66, 0.4); 
   border-radius: 2px;
-  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -996,6 +1000,7 @@ label{
   background-color: #404bbf; 
   border: none;
   fill: #F4F4FD;
+  
 }
 
 
